@@ -1,4 +1,8 @@
 ###### TWE 5.1-1 RELEASED ######
+2014-05-08 Sasa Bojanic <sasaboy@together.at>
+   # Artifact's TextAnnotation is now represented by TextArea with several rows
+   # Shark mode: Script expressions now have 15 characters
+   
 2014-04-26 Sasa Bojanic <sasaboy@together.at>
    # Shark mode: 
       - Support for new extended attribute "IS_ACTIVITY_SCOPE_ONLY"
